--- a/views/templates/member/myinfo.html
+++ b/views/templates/member/myinfo.html
@@ -3,37 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>세미프로젝트</title>
+    <link rel="stylesheet" href="/static/css/bs5/bootstrap.min.css">
     <link rel="stylesheet" href="/static/css/project.css" >
-    <style>
-        table { border: 1px solid black; margin: 120px auto;
-            border-collapse: collapse }
-        th, td { border: 1px solid black; padding: 5px 8px }
-    </style>
+
 </head>
 <body>
-    <div id="wrap">
-        <header><h1>세미프로젝트 - 회원정보</h1></header>
-        <nav><ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/member/join">회원가입</a></li>
-            <li><a href="/member/login">로그인</a></li>
-            <li><a href="/board/list">게시판</a></li>
-            <li><a href="/member/myinfo">회원정보</a></li>
+    <div id="wrap" class="container">
+        <header class="py-3"><h1>세미프로젝트 - 회원정보</h1></header>
+        <nav><ul class="nav nav-fill">
+            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/member/join">회원가입</a></li>
+            <li class="nav-item"><a class="nav-link" href="/member/login">로그인</a></li>
+            <li class="nav-item"><a class="nav-link" href="/board/list">게시판</a></li>
+            <li class="nav-item"><a class="nav-link" href="/member/myinfo">회원정보</a></li>
         </ul>
             <hr>
         </nav>
         <main>
             <h2>회원정보</h2>
-            <table border="0" cellspacing="0">
+            <div class="d-flex justify-content-center align-items-center" style="height:65vh">
+                <table class="table w-25 table-bordered table-striped">
                 <tr><td>아이디</td><td>dsfsf</td></tr>
                 <tr><td>이름</td><td>sdfsf</td></tr>
                 <tr><td>이메일</td><td>dsfsf</td></tr>
                 <tr><td>가입일</td><td>df</td></tr>
             </table>
+            </div>
         </main>
         <footer>
             <hr>
-            <p>copyright &copy; 2024. dangdang. all rights reserved.</p>
+            <p class="text-center">copyright &copy; 2024. dangdang. all rights reserved.</p>
         </footer>
     </div>
 </body>
