myinfo: 템플릿으로 작성

--- a/views/templates/member/myinfo.html
+++ b/views/templates/member/myinfo.html
@@ -1,24 +1,10 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>세미프로젝트</title>
-    <link rel="stylesheet" href="/static/css/bs5/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/css/project.css" >
+{% extends 'include/base.html' %}
 
-</head>
-<body>
-    <div id="wrap" class="container">
-        <header class="py-3"><h1>세미프로젝트 - 회원정보</h1></header>
-        <nav><ul class="nav nav-fill">
-            <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/member/join">회원가입</a></li>
-            <li class="nav-item"><a class="nav-link" href="/member/login">로그인</a></li>
-            <li class="nav-item"><a class="nav-link" href="/board/list">게시판</a></li>
-            <li class="nav-item"><a class="nav-link" href="/member/myinfo">회원정보</a></li>
-        </ul>
-            <hr>
-        </nav>
+{% block title %}
+세미프로젝트 - 회원정보
+{% endblock %}
+
+{% block main %}
         <main>
             <h2>회원정보</h2>
             <div class="d-flex justify-content-center align-items-center" style="height:65vh">
@@ -30,10 +16,4 @@
             </table>
             </div>
         </main>
-        <footer>
-            <hr>
-            <p class="text-center">copyright &copy; 2024. dangdang. all rights reserved.</p>
-        </footer>
-    </div>
-</body>
-</html>
+{% endblock %}
