--- a/views/templates/member/join.html
+++ b/views/templates/member/join.html
@@ -4,6 +4,16 @@
 세미프로젝트 - 회원가입
 {% endblock %}
 
+{% block style %}
+    <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit"
+            async defer></script>
+    <script type="text/javascript">
+        var onloadCallback = () => {
+            grecaptcha.render('captcha', { 'sitekey' : '' });
+        };
+    </script>
+{% endblock %}
+
 
 {% block main %}
         <main>
@@ -33,6 +43,10 @@
                     <div class="col-7">
                         <input type="email" name="email" id="email" required class="form-control"></div>
                     </div>
+
+                <div class="row my-2"><label for="captcha" class="col-form-label col-4 text-end">자동가입방지</label>
+                    <div class="col-7"><div id="captcha"></div></div></div>
+
                 <div class="row my-2"><label class="col-4"></label>
                     <div class="col-7">
                         <button type="button" id="joinbtn" class="btn btn-primary">입력완료</button>
@@ -65,7 +79,7 @@
             frm.repasswd.focus();
             return false;
         } else if (frm.repasswd.value !== frm.passwd.value) {
-            alert('비밀번호가 일치하지 않습니다.!');
+            alert('비밀번호가 일치하지 않습니다!');
             frm.repasswd.focus();
             return false;
         } else if (frm.name.value === '') {
@@ -76,7 +90,11 @@
             alert('이메일을 입력하세요!');
             frm.email.focus();
             return false;
+        } else if (grecaptcha.getResponse() === '') {
+            alert('자동가입방지를 클릭하세요!');
+            return false;
         }else {
+            // console.log('--', grecaptcha.getResponse())
             return true;
         }
     };
@@ -94,7 +112,8 @@
         formData.forEach((val, key) => {
             jsondata[key] = val;
         });
-
+        // 캡챠 응답코드 추가
+        jsondata['captcha'] = grecaptcha.getResponse();
         console.log(jsondata);
 
         // ajax를 이용해서 서버로 json 데이터 전송하고, 결과 받음
