--- a/views/templates/member/login.html
+++ b/views/templates/member/login.html
@@ -8,7 +8,7 @@
         <main>
             <h2>로그인</h2>
             <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
-                <form name="loginfrm" method="post" class="col-5">
+                <form name="loginfrm" class="col-5">
                 <div class="row my-2"><label for="userid" class="col-form-label col-4 text-end">아이디</label>
                     <div class="col-7">
                         <input type="text" name="userid" id="userid" required class="form-control"></div>
@@ -25,4 +25,40 @@
             </form>
             </div>
         </main>
+{% endblock %}
+
+{% block script %}
+<script>
+    let loginfrm = document.loginfrm;
+
+    // type = button 일때는 button을 selectquery 해와서 addEventListner 을 해줘야함
+    // type = submit 일때는 form에 바로 addEventListener 적용가능
+    loginfrm.addEventListener('submit', (e) => {
+        e.preventDefault(); // 버튼의 submit 기능 중지 (submit 되지말고 기다려)
+
+        const formData = new FormData(loginfrm);
+
+        // 서버로 보내기 위해 폼데이터를 JSON 객체로 변환
+        let jsondata = {};
+        formData.forEach((val, key) => {
+            jsondata[key] = val;
+        });
+        console.log(jsondata);
+
+        fetch('/member/login', {
+            method: 'POST',
+            headers: {
+                'Accept': 'application/json',
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(jsondata),
+            redirect: 'follow'
+        }).then((res) => {
+            if (res.redirected) location.href = res.url;
+        });
+
+    });
+
+
+</script>
 {% endblock %}
