--- a/views/templates/member/error.html
+++ b/views/templates/member/error.html
@@ -6,6 +6,7 @@
 
 {% block main %}
         <main>
+            <h1>오류발생</h1>
             <div class="d-flex justify-content-center align-items-center" style="height: 65vh">
                 <img src="/static/img/error.png" class="img-fluid">
             </div>
