--- a/views/templates/gallery/write.html
+++ b/views/templates/gallery/write.html
@@ -9,7 +9,7 @@
         async defer></script>
 <script type="text/javascript">
     var onloadCallback = () => {
-        grecaptcha.render('captcha', { 'sitekey' : '6LePoCsqAAAAADKK1Ttn7BaH-1nKuXcOD47tbQNd' });
+        grecaptcha.render('captcha', { 'sitekey' : '' });
     };
 </script>
 <style>
