--- a/views/templates/gallery/view.html
+++ b/views/templates/gallery/view.html
@@ -19,13 +19,17 @@
 <main>
     <h2>본문글</h2>
     <table>
-        <tr><th>제 목</th><td>시간은 금이라구 제목</td></tr>
-        <tr><th>작성자</th><td>dangdang</td></tr>
-        <tr><th>작성일</th><td>2024-07-30 15:17:50</td></tr>
-        <tr>
-            <th>본문</th>
-            <td><textarea rows="20" cols="50">시간은 친구라구 내용</textarea></td>
-        </tr>
+        {% for g in gallery %}
+        <tr><th>제 목</th><td>{{ g.title }}</td></tr>
+        <tr><th>작성자</th><td>{{ g.userid }}</td></tr>
+        <tr><th>작성일</th><td>{{ g.regdate }}</td></tr>
+        <tr><th>본문</th><td>{{ g.contents }}
+            {% endfor %}
+            {% for ga in galattach %}
+            <img src="http://127.0.0.1/cdn/img/{{ ga.fname }}"
+                class="img-fluid">
+            {% endfor %}
+        </td></tr>
         <tr><td colspan="2">
             <button type="button" id="listbtn" onclick="location.href='/gallery/list/1'">리스트로</button>
             <button type="button" id="mdfbtn" onclick="location.href='/gallery/modify'">수정하기</button>
