--- a/views/templates/include/header.html
+++ b/views/templates/include/header.html
@@ -12,6 +12,7 @@
 
     <li class="nav-item"><a class="nav-link" href="/board/list/1">게시판</a></li>
     <li class="nav-item"><a class="nav-link" href="/gallery/list/1">갤러리</a></li>
+    <li class="nav-item"><a class="nav-link" href="/pds/list/1">자료실</a></li>
     <li class="nav-item"><a class="nav-link" href="/member/myinfo">회원정보</a></li>
 </ul>
     <hr>
