--- a/views/templates/board/list.html
+++ b/views/templates/board/list.html
@@ -17,7 +17,7 @@
     thead td:last-child { text-align: right }
     select, input, button { padding: 5px }
     button { padding: 4px 5px }
-    .pagnation { width: 600px; margin: 0 auto; }
+    .pagnation { width: 680px; margin: 0 auto; }
     div > ul { list-style: none; padding: 0;}
     div > ul li { display: inline; padding: 0 15px }
     .cpg { color: red; font-size: 30px; font-weight: bold }
@@ -47,7 +47,11 @@
             </select>
                 <input type="text" name="search" id="search">
                 <button type="button" id="findbtn">검색하기</button></td>
-            <td colspan="2"><button type="button" id="writebtn" onclick="location.href='/board/write'">글쓰기</button></td>
+            <td colspan="2">
+                {% if 'logined_uid' in request.session %}
+                <button type="button" id="writebtn">글쓰기</button>
+                {% endif %}
+            </td>
         </tr>
         <th>번호</th>
         <th>제목</th>
@@ -88,4 +92,13 @@
         </ul>
     </div>
 </main>
+{% endblock %}
+
+{% block script %}
+<script>
+    let writebtn = document.querySelector('#writebtn');
+    writebtn.addEventListener('click', () => {
+       location.href = '/board/write';
+    });
+</script>
 {% endblock %}
