--- a/views/templates/board/write.html
+++ b/views/templates/board/write.html
@@ -22,7 +22,7 @@
     <form name="writefrm" method="post">
         <table>
             <tr><th>제 목</th><td><input type="text" name="title" id="title" required></td></tr>
-            <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="dangdang" readonly></td></tr>
+            <tr><th>작성자</th><td><input type="text" name="userid" id="userid" value="{{ request.session.logined_uid }}" readonly></td></tr>
             <tr>
                 <th>본문</th>
                 <td><textarea name="contents" id="contents" rows="10" cols="45" required></textarea></td>
