--- a/views/templates/board/view.html
+++ b/views/templates/board/view.html
@@ -65,9 +65,11 @@
             <div class="form-group row">
                 <div class="col-auto"><label class="ms-3 pushbtn" for="reply">작성자</label></div>
                 <div class="col-8"><textarea class="form-control" name="reply" id="reply" rows="5" required></textarea></div>
-                <div class="col-auto"><button class="btn btn-dark pushbtm" type="submit" id="newbrbtn">
+                <div class="col-auto"><button class="btn btn-dark pushbtn" type="submit" id="newbrbtn">
                     <i class="bi bi-chat-dots"></i> 댓글쓰기</button></div>
             </div>
+            <input type="hidden" name="userid" value="abc123">
+            <input type="hidden" name="bno" value="{{ boards.bno }}">
         </form>
     </div><!-- 댓글쓰기 -->
 
